* Improvements to default WPML language switcher in header.
* Added "Text Blocks" sortable option type.
* Added buttons sizes `xxl` and `xxxl`.
* Added option to change thumbnail highlight icon color, for all theme bases.
* Added "video" class that can be used in WordPress menu builder to link to a YouTube or Vimeo video in lightbox.
* Allow mobile menu to be filtered to appear from left.
* Minified theme.js, theme-rtl.js, and dark.css assets.
* Fixed: Only load Nivo script if Theme Blvd Sliders plugin is installed.
* Fixed: Animation of hiding mobile menu with RTL languages.
* Fixed: Inconsistencies with Bootstrap responsive breakpoints, down to the pixel.
* Fixed: Filter & Masonry column dropping in Firefox.
* Fixed: Broken default WordPress galleries in Firefox, when thumbnails are big enough to overflow.

**Important:** If updating from a development, beta, or RC version of Jump Start 2:
* You must update to the latest version of the Layout Builder plugin, currently 2.0.6.
* You must reconfigure options of any "Hero Unit" (previously named Jumbotron) used in Builder.
* You must reconfigure any selections for "Responsive Visibility" display options in Builder.

--------------------------------------------------------------

2.0.0-RC1 - 05/01/2015
----------------------

* Added ThemeForest update system.
* Added "Save Options" button to individual sections of Theme Options page.
* Added "Naked Page" page template, which outputs a standard page without content background.
* Added option to style bbPress pages like new naked page template, see *Appearance > Theme Options > Plugins > bbPress*.
* Added theme debug info to output in `<head>` of site, [see here](http://dev.themeblvd.com/tutorial/remove-debug-info).
* Moved viewport meta tag closer to top of `<head>`.
* Improved responsive display of Tabs element and `[tabs]` shortcode.
* Improved thumbnail link hover icons.
* Improved extendability of HTML5 output of background videos.